syntax = "proto3";

// ! you must not change the tag numbers of any existing fields.
// ! you may delete fields.
// ! you may add new fields but you must use fresh tag numbers (i.e. tag numbers that were never used in this protocol buffer, not even by deleted fields).

// Define Package
package sonr;

// Require Go Package
option go_package = ".;proto";

// Create AuthMessage
message AuthMessage {
  // Define Root Message
    Subject subject = 1;
    bool decision = 2;
    Metadata metadata = 3;
    PeerInfo peerInfo = 4;
    bytes thumbnail = 5;

  // Define Subject
  enum Subject {
    NONE = 0;
    REQUEST = 1;
    RESPONSE = 2;
  }
}

  // Define Metadata Type
message Metadata {
    string id = 1;
    string name = 2;
    string path = 3;
    int64 size = 4;
    string kind = 5;
  }

// Define PeerInfo Type
message PeerInfo {
    string id = 1;
    string device = 2;
    string firstName = 3;
    string lastName = 4;
    string profilePic = 5;
    double direction = 6;
  }

// Define PeerInfo Type
message Profile {
    string id = 1;
    string olc = 2;
    string device = 3;
    double distance = 5;
    double direction = 6;
  }

